<resources>
    <string name="app_name">MQTT</string>
    <string name="rgb">RGB灯</string>
    <string name="Change">页面切换</string>
    <string name="Connect">连接</string>
    <string name="Remember">备忘录</string>
    <string name="Overview">总览</string>
    <string name="Weather">天气</string>
    <string name="Temperature">温度</string>
    <string name="Humidity">湿度</string>
    <string name="Message">信息</string>
    <string name="Go_off">灭</string>
    <string name="Light_b">B</string>
    <string name="Light_g">G</string>
    <string name="Light_r">R</string>
    <string name="server_ip">服务器IP</string>
    <string name="client_id">客户端ID</string>
    <string name="client_account">客户账号</string>
    <string name="client_password">客户密码</string>
    <string name="subscribe">订阅主题</string>
    <string name="publish">发布主题</string>
    <string name="finish">完成</string>
    <string name="input">请输入消息</string>
    <string name="send">发送</string>
    <string name="null1">" "</string>
    <string name="Account">账号</string>
    <string name="Please_Input_Account">请输入账号</string>
    <string name="Password">密 码:</string>
    <string name="enroll">注册</string>
    <string name="Login">登录</string>
    <string name="Please_Input_Password">请输入密码</string>
    <string name="Please_Input_Password_again">请再次输入密码</string>
    <string name="Submit">注册</string>
    <string name="Please_Input_Username">请输入用户名</string>


</resources>