<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              style="?android:attr/buttonBarButtonStyle"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="150dp"
              android:gravity="center_horizontal"
              android:background="@drawable/background3">

    <Button
            android:id="@+id/overview"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:textSize="23sp"
            android:text="@string/Overview"
            android:textColor="#3E2723"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>
    <Button
            android:id="@+id/weather"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/Weather"
            android:textColor="#3E2723"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>
    <Button
            android:id="@+id/temperature"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/Temperature"
            android:textColor="#3E2723"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>
    <Button
            android:id="@+id/humidity"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/Humidity"
            android:textColor="#3E2723"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>
    <Button
            android:id="@+id/message"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/Message"
            android:textColor="#3E2723"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>

</LinearLayout>
