<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoginActivity"
                                                   android:background="@drawable/background6">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="550dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/Account"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/account_input"
                    android:background="@drawable/bg_username"
                    android:layout_marginStart="10dp"
                    android:autofillHints="broker.emqx.io"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:hint="@string/Please_Input_Account"
                    android:textColorHint="#8F9FA6"
                    android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_weight="0.3"
                    android:text="@string/Password"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/password_input"
                    android:background="@drawable/bg_username"
                    android:layout_marginStart="10dp"
                    android:autofillHints="broker.emqx.io"
                    android:inputType="textPassword"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:hint="@string/Please_Input_Password"
                    android:textColorHint="#8F9FA6"
                    android:gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/Login"
            />
            <Button
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="@string/enroll"
            />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
