<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              style="?android:attr/buttonBarButtonStyle"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="120dp"
              android:gravity="center_horizontal"
              android:background="@drawable/background6">
    <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/server_ip"/>
        <EditText
                android:background="@drawable/bg_username"
                android:layout_marginStart="10dp"
                android:autofillHints="broker.emqx.io"
                android:inputType="textUri"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:hint="@string/server_ip"
                android:textColorHint="#8F9FA6"
                android:gravity="center"

                />
    </LinearLayout>
        <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:orientation="horizontal">
            <TextView
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/client_id"/>
            <EditText
                    android:background="@drawable/bg_username"
                    android:layout_marginStart="10dp"
                    android:hint="@string/client_id"
                    android:textColorHint="#8F9FA6"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center"
                   />
        </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/client_password"/>
        <EditText
                android:background="@drawable/bg_username"
                android:layout_marginStart="10dp"
                android:hint="@string/client_password"
                android:textColorHint="#8F9FA6"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/subscribe"/>
        <EditText
                android:background="@drawable/bg_username"
                android:layout_marginStart="10dp"
                android:hint="@string/subscribe"
                android:textColorHint="#8F9FA6"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/publish"/>
        <EditText
                android:background="@drawable/bg_username"
                android:layout_marginStart="10dp"
                android:hint="@string/publish"
                android:textColorHint="#8F9FA6"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
        />
    </LinearLayout>
    <Button
            android:id="@+id/Finish"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/purple_200"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:text="@string/finish"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize"/>
</LinearLayout>